--- a/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.de.xlf
+++ b/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.de.xlf
@@ -239,6 +239,42 @@
           <source>Close</source>
           <target state="signed-off" state-qualifier="mt-suggestion">Schließen</target>
         </trans-unit>
+        <trans-unit id="Resx/termFind" translate="yes" xml:space="preserve">
+          <source>Find</source>
+          <target state="signed-off" state-qualifier="mt-suggestion">Suchen</target>
+        </trans-unit>
+        <trans-unit id="Resx/toolAreaGoLineNo" translate="yes" xml:space="preserve">
+          <source>Line Number (1-</source>
+          <target state="signed-off">Zeile (1-</target>
+        </trans-unit>
+        <trans-unit id="Resx/toolAreaRegularEx" translate="yes" xml:space="preserve">
+          <source>Use Regular Expressions</source>
+          <target state="signed-off">Reguläre Ausdrücke</target>
+        </trans-unit>
+        <trans-unit id="Resx/toolAreaMatchWholeWord" translate="yes" xml:space="preserve">
+          <source>Match whole word</source>
+          <target state="signed-off" state-qualifier="mt-suggestion">Ganzes Wort</target>
+        </trans-unit>
+        <trans-unit id="Resx/toolAreaMatchCase" translate="yes" xml:space="preserve">
+          <source>Match case</source>
+          <target state="signed-off" state-qualifier="mt-suggestion">Groß-/Kleinschreibung</target>
+        </trans-unit>
+        <trans-unit id="Resx/toolAreaReplaceWith" translate="yes" xml:space="preserve">
+          <source>Replace with:</source>
+          <target state="signed-off">Ersetzen mit:</target>
+        </trans-unit>
+        <trans-unit id="Resx/toolAreaSearchUp" translate="yes" xml:space="preserve">
+          <source>Search up</source>
+          <target state="signed-off">Rückwärts</target>
+        </trans-unit>
+        <trans-unit id="Resx/termGo" translate="yes" xml:space="preserve">
+          <source>Go</source>
+          <target state="signed-off">Gehe zu</target>
+        </trans-unit>
+        <trans-unit id="Resx/termReplace" translate="yes" xml:space="preserve">
+          <source>Replace</source>
+          <target state="signed-off" state-qualifier="mt-suggestion">Ersetzen</target>
+        </trans-unit>
         <trans-unit id="Resx/logWindowInfoText" translate="yes" xml:space="preserve">
           <source>This debug information will not be saved to a file.</source>
           <target state="signed-off">Diese Informationen werden nicht gespeichert.</target>
