--- a/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.it.resx
+++ b/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.it.resx
@@ -471,6 +471,7 @@
   </data>
   <data name="sett_text_EncrpytionMethod" xml:space="preserve">
     <value>Metodo di crittografia</value>
+    <comment></comment>
   </data>
   <data name="sett_text_BCryptAESRounds" xml:space="preserve">
     <value>BCrypt/AES arrotondamenti:</value>
