--- a/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.it.xlf
+++ b/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.it.xlf
@@ -275,6 +275,10 @@
           <source>Search up</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Ricerca verso l'alto</target>
         </trans-unit>
+        <trans-unit id="Resx/termNotes" translate="yes" xml:space="preserve">
+          <source>Notes</source>
+          <target state="new">Notes</target>
+        </trans-unit>
         <trans-unit id="Resx/termGo" translate="yes" xml:space="preserve">
           <source>Go</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Vai</target>
@@ -312,8 +316,8 @@
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Predefinito: 2</target>
         </trans-unit>
         <trans-unit id="Resx/sett_text_EncrpytionMethod" translate="yes" xml:space="preserve">
-          <source>Encryption Method</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">Metodo di crittografia</target>
+          <source>Encryption Method:</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Metodo di crittografia</target><note from="MultilingualUpdate" priority="2" annotates="source">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
         </trans-unit>
         <trans-unit id="Resx/sett_text_BCryptAESRounds" translate="yes" xml:space="preserve">
           <source>BCrypt/AES Rounds:</source>
