--- a/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.ru.resx
+++ b/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.ru.resx
@@ -117,9 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Hello_World" xml:space="preserve">
-    <value>Привет, мир!</value>
-  </data>
   <data name="constUntitledDotVisualCrypt" xml:space="preserve">
     <value>Без названия.visualcrypt</value>
   </data>
@@ -542,5 +539,26 @@
   </data>
   <data name="termReplace" xml:space="preserve">
     <value>Заменить</value>
+  </data>
+  <data name="termNotes" xml:space="preserve">
+    <value>Заметки</value>
+  </data>
+  <data name="fileDlgSetName" xml:space="preserve">
+    <value>Сохранить заметку</value>
+  </data>
+  <data name="termFilename" xml:space="preserve">
+    <value>Имя файла:</value>
+  </data>
+  <data name="termShare" xml:space="preserve">
+    <value>Общий ресурс</value>
+  </data>
+  <data name="fileDlgRename" xml:space="preserve">
+    <value>Переименовать заметку</value>
+  </data>
+  <data name="fileDlgDeleteMany" xml:space="preserve">
+    <value>Удалить примечания?</value>
+  </data>
+  <data name="fileDlgDelete" xml:space="preserve">
+    <value>Удалить заметку?</value>
   </data>
 </root>
